[package]
name = "crowdfunding-dcdt"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/crowdfunding_dcdt.rs"

[dependencies.dharitri-sc]
version = "0.54.3"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
