[package]
name = "liquid-locking"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"

[dependencies.dharitri-sc]
version = "0.54.3"
