[package]
name = "dharitri-price-aggregator-sc"
version = "0.47.1"
authors = [
    "Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Price aggregator Smart Contract"
keywords = [
    "dharitri",
    "wasm",
    "webassembly",
    "blockchain",
    "contract",
]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
]
edition = "2021"

[lib]
path = "src/lib.rs"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"

[dependencies.dharitri-sc]
version = "0.54.3"

[dependencies.dharitri-sc-modules]
version = "0.54.3"

[dependencies.arrayvec]
version = "0.7.1"
default-features = false

[dependencies.rand]
version = "0.8.5"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
