[package]
name = "proxy-deployer"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=0.54.3"
features = ["dcdt-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.54.3"

[dev-dependencies.adder]
path = "../adder"
