[package]
name = "rewards-distribution"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/rewards_distribution.rs"

[dependencies.dharitri-sc]
version = "0.54.3"

[dependencies.dharitri-sc-modules]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
