[package]
name = "seed-nft-minter"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/seed_nft_minter.rs"

[dependencies.dharitri-sc]
version = "0.54.3"

[dependencies.dharitri-sc-modules]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
