[package]
name = "dharitri-wrewa-swap-sc"
version = "0.47.1"
authors = [
    "Dorin Iancu <dorin.iancu@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/dharitri/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Wrapped REWA Smart Contract"
keywords = [
    "dharitri",
    "wasm",
    "webassembly",
    "blockchain",
    "contract",
]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
]
edition = "2021"

[lib]
path = "src/wrewa.rs"

[dependencies.dharitri-sc]
version = "0.54.3"

[dependencies.dharitri-sc-modules]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
