[package]
name = "basic-interactor"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[[bin]]
name = "basic-interactor"
path = "src/basic_interactor_main.rs"

[lib]
path = "src/basic_interactor.rs"

[dependencies.adder]
path = ".."

[dependencies.dharitri-sc-snippets]
version = "0.54.3"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }

[features]
chain-simulator-tests = []
