[package]
name = "kitty-auction"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.kitty]
version = "0.0.0"
path = "../common/kitty"

[dependencies.kitty-ownership]
version = "0.0.0"
path = "../kitty-ownership"

[dependencies.dharitri-sc]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
