[package]
name = "kitty-ownership"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.kitty]
version = "0.0.0"
path = "../common/kitty"

[dependencies.random]
version = "0.0.0"
path = "../common/random"

[dependencies.kitty-genetic-alg]
version = "0.0.0"
path = "../kitty-genetic-alg"

[dependencies.dharitri-sc]
version = "0.54.3"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.3"
