[package]
name = "ping-pong-rewa-interact"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.com>"]
edition = "2021"
publish = false

[[bin]]
name = "ping-pong-rewa-interact"
path = "src/interact_main.rs"

[lib]
path = "src/interact.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }

[dependencies.ping-pong-rewa]
path = ".."

[dependencies.dharitri-sc-snippets]
version = "0.54.3"

[dependencies.dharitri-sc]
version = "0.54.3"

[features]
chain-simulator-tests = []
