[package]
name = "dharitri-wrewa-swap-sc-meta"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[dev-dependencies]

[dependencies.dharitri-wrewa-swap-sc]
path = ".."

[dependencies.dharitri-sc]
version = "0.54.3"

[dependencies.dharitri-sc-meta-lib]
version = "0.54.3"
default-features = false
